Fix the issues with the gap

--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,6 @@ body {
     align-items: center;
     justify-content: center;
 
-    gap: 100px;
-
     background: linear-gradient(0deg, rgba(115, 111, 111, .5) 20%, rgba(69, 56, 69, .5) 65%), url(./assets/background.png);
     background-repeat: no-repeat;
     background-size: cover;
